Download button CSS added

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -34,7 +34,7 @@
    
        
     <footer class="footer">
-      <button class="footer-header" id = "download">
+      <button id = "download">
         Download 
       </button>
     </footer>
