--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,11 +17,8 @@
   </head>
   <body>
     <div class="tab">
-      <!-- <button class="tablinks active">
-        Toggle On / Off
-      </button> -->
       <button class="tablinks">
-        All Notes
+        All Saved Notes
       </button>
     </div>
 
