--- a/popup/popup.html
+++ b/popup/popup.html
@@ -32,7 +32,7 @@
        
     <footer class="footer">
       <button id = "download">
-        Download 
+        Download Notes
       </button>
     </footer>
 
